--- a/nudensity.html
+++ b/nudensity.html
@@ -23,7 +23,7 @@
 						   } else {
 							   bg='white'
 						   }
-						   $("#currdensity").append("<tr bgcolor='" + bg + "'><td class='"  + result[i].density + "' width='25%''>" + result[i].building + "</td><td><img height='75px' width='75px' src='" + result[i].picture +  "'></td></tr>");			   
+							$("#currdensity").append("<tr bgcolor='" + bg + "'><td class='"  + result[i].density + "' width='25%''>" + result[i].building + "</td><td><img height='75px' width='75px' src='" + result[i].picture +  "'></td></tr>");			   
 					}
 
 				}
@@ -57,23 +57,7 @@
   									<table id="currdensity" border="1">
 										  <thead><h3>Recent Destinations</h3></thead>
 										  <tbody></tbody>
-  										<!--<tr bgcolor="lightblue">
-  											<td class="low" width="25%">Snell Library</td>
-  											<td><img height="75px" width="75px" src="snell.jpeg"></td>
-  										</tr>
-  										<tr>
-  											<td class="low">
-  												Curry Student Centery
-  											</td>
-  											<td><img height="75px" width="75px" src="currystudent.jpeg"></td>
-  										</tr>
-  										<tr bgcolor="lightblue">
-  											<td class="high">
-  												Rebecca's Cafe
-  											</td>
-  											<td><img height="75px" width="75px" src="rebeccas.jpeg"></td>
-										  </tr>
-										-->  
+  										<!-- Dynamic Content supplied by javascript-->  
   									</table>
   								</section>
   							</td>
